465 fix content header buttons spacing

--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -20,6 +20,11 @@
 @import '../stylesheets/transition_cards';
 @import '../stylesheets/pdf';
 
+.content-header {
+  .btn {
+    margin-left: 1.2em;
+  }
+}
 .login-box {
   margin-top: 20%;
 }
